processed/gerrit/txt_full/29195.txt
Change:     29195
Subject:    LU-9309 ldiskfs: Add 64-bit inode number support
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/29195
Change-Id:  Idbae507ecbe5a8a54494581519ddcd306a43a906
Project:    fs/lustre-release
Branch:     master
Status:     ABANDONED
Owner:      Artem Blagodarenko
Created:    2017-09-25 17:23:41.000000000
Updated:    2018-11-19 09:17:38.000000000
Patch Set:  2
Insertions: +561
Deletions:  -54
Comments:   14 (0 unresolved)

--- Reviewers ---
  REVIEWER: Jenkins, Artem Blagodarenko, Lustre Buildbot

--- Commit Message ---
LU-9309 ldiskfs: Add 64-bit inode number support

With current hardware clusters faced with the trouble of
creating enough inodes on LDISKFS partitions. MDS has 0-size
files to store some information about Lustre FS files. Current
MDS disk sizes allow to store large amount of such files, but
EXT4 limits this number to ~4 billions.

Lustre FS has features like DNE to distribute MDS over many targets
(disks), but disks are used not effectively. It would be great to have
ability to store more then ~4 billions inodes on one EXT4 file system.

This patch adds usesing dirdata to store high bits of 64bit inode
number.

Signed-off-by: Artem Blagodarenko <artem.blagodarenko@seagate.com>
Change-Id: Idbae507ecbe5a8a54494581519ddcd306a43a906

--- Review History ---

--- Message (Artem Blagodarenko, 2017-09-25 17:23:41.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2017-09-25 17:25:23.000000000) ---
Patch Set 1:

(7 comments)

7 style warning(s).
For more details please see https://wiki.hpdd.intel.com/display/PUB/Coding+Guidelines

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2017-09-25 17:29:35.000000000) ---
Patch Set 1:

Cannot build patch due to 14, messages:

 scripts/Makefile.build:308: recipe for target '/home/green/smt/git/lustre-release/lustre/osd-ldiskfs/osd_scrub.o' failed
make[4]: *** [/home/green/smt/git/lustre-release/lustre/osd-ldiskfs/osd_scrub.o] Error 1
scripts/Makefile.build:455: recipe for target '/home/green/smt/git/lustre-release/lustre/osd-ldiskfs' failed
make[3]: *** [/home/green/smt/git/lustre-release/lustre/osd-ldiskfs] Error 2
scripts/Makefile.build:455: recipe for target '/home/green/smt/git/lustre-release/lustre' failed
make[2]: *** [/home/green/smt/git/lustre-release/lustre] Error 2
Makefile:1269: recipe for target '_module_/home/green/smt/git/lustre-release' failed
make[1]: *** [_module_/home/green/smt/git/lustre-release] Error 2
autoMakefile:1043: recipe for target 'modules' failed
make: *** [modules] Error 2

--- Message (Lustre Buildbot, 2017-09-25 17:33:15.000000000) ---
Patch Set 1:

Overall Build Status: FAIL

Builder CentOS 6.7 x86_64 (BUILD) failed (failed shell_4) - http://build.lustre.org/builders/CentOS%206.7%20x86_64%20%28BUILD%29/builds/11270

Builder CentOS 6.8 x86_64 (BUILD) failed (failed shell_4) - http://build.lustre.org/builders/CentOS%206.8%20x86_64%20%28BUILD%29/builds/7406

Builder CentOS 7.2 x86_64 (BUILD) failed (failed shell_4) - http://build.lustre.org/builders/CentOS%207.2%20x86_64%20%28BUILD%29/builds/11256

Builder Ubuntu 14.04 x86_64 (BUILD) succeeded (build successful) - http://build.lustre.org/builders/Ubuntu%2014.04%20x86_64%20%28BUILD%29/builds/11216

--- Message (Jenkins, 2017-09-25 17:40:55.000000000) ---
Patch Set 1: Verified-1

Build Failed 

https://build.hpdd.intel.com/job/lustre-reviews/50786/ : FAILURE

--- Message (Yang Sheng, 2017-11-13 12:44:27.000000000) ---
Patch Set 1:

(1 comment)

--- Message (wc-checkpatch, 2017-12-17 08:09:38.000000000) ---
Patch Set 1: Code-Review-1

This change cannot be cherry-picked to master.
Please rebase the change locally and upload the rebased commit for review.

--- Message (Artem Blagodarenko, 2018-10-02 07:59:34.000000000) ---
Uploaded patch set 2.

--- Message (wc-checkpatch, 2018-10-02 08:00:06.000000000) ---
Patch Set 2:

(6 comments)

6 style warning(s).
For more details please see https://wiki.hpdd.intel.com/display/PUB/Coding+Guidelines

--- Message (Artem Blagodarenko, 2018-10-02 08:00:58.000000000) ---
Patch Set 2:

Pushed rebased version here just do not lost it. Please, do not inspect it. Currently inspection is on EXT4 upstream.

--- Message (Artem Blagodarenko, 2018-10-02 08:01:04.000000000) ---
Patch Set 2: Code-Review-1

--- Message (Misc Code Checks Robot (Gatekeeper helper), 2018-10-02 08:03:54.000000000) ---
Patch Set 2:

Cannot build patch due to 14, messages:

  /home/green/smt/git/lustre-release/lustre/osd-ldiskfs/osd_scrub.c: In function ‘osd_inode_iteration’:
 /home/green/smt/git/lustre-release/lustre/osd-ldiskfs/osd_scrub.c:1168:2: error: implicit declaration of function ‘ldiskfs_get_inodes_count’ [-Werror=implicit-function-declaration]
   limit = le64_to_cpu(ldiskfs_get_inodes_count(
   ^
 /home/green/smt/git/lustre-release/lustre/osd-ldiskfs/osd_scrub.c: At top level:
 cc1: error: unrecognized command line option "-Wno-format-truncation" [-Werror]

--- Message (Jenkins, 2018-10-02 08:20:03.000000000) ---
Patch Set 2: Verified-1

Build Failed 

https://build.whamcloud.com/job/lustre-reviews-patchless/905/ : FAILURE

https://build.whamcloud.com/job/lustre-reviews/58885/ : FAILURE

--- Message (wc-checkpatch, 2018-10-05 23:25:13.000000000) ---
Patch Set 2: Code-Review-1

This change cannot be cherry-picked to master.
Please rebase the change locally and upload the rebased commit for review.

--- Message (Artem Blagodarenko, 2018-11-19 09:17:38.000000000) ---
Abandoned

Should be landed through kernel.
